Fix horizontal scroll

--- a/assets/scss/partials/_boxes.scss
+++ b/assets/scss/partials/_boxes.scss
@@ -1,7 +1,26 @@
+// Sections.
 #jumbotron, #services, #about, #gallery, #contact {
     padding: 10% 0 0 0;
 }
 
+// Google Map.
+#location {
+	position:relative;
+	overflow:hidden;
+	width:100%;
+	height:500px;
+
+		.map {
+		position:absolute;
+		left:0;top:0;
+		overflow:hidden;
+		width:100%;
+		height:500px;
+	}
+
+}
+
+// Social Networks.
 .social-nav {
     margin: 17px 0 4px 10px;
     border-left: 1px solid white;
@@ -12,9 +31,11 @@
     }
     a {
         color: white;
+        padding-right: 5px;
     }
 }
 
+// Contact.
 .contact-box {
     .item {
         ul {
